<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstrainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top">

            <ImageView
                android:id="@+id/ivBici"
                android:layout_width="113dp"
                android:layout_height="118dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/descripcion_imagen_bici"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvCiudad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/ciudad"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toStartOf="@+id/ibEmail"
                app:layout_constraintStart_toEndOf="@+id/ivBici"
                app:layout_constraintTop_toTopOf="@+id/ivBici" />

            <TextView
                android:id="@+id/tvPropietario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/due_o"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvCiudad"
                app:layout_constraintTop_toBottomOf="@+id/tvCiudad" />

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:singleLine="false"
                android:text="@string/direccion"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvPropietario"
                app:layout_constraintTop_toBottomOf="@+id/tvPropietario" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:text="@string/descripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvDireccion"
                app:layout_constraintTop_toBottomOf="@+id/tvDireccion" />

            <ImageButton
                android:id="@+id/ibEmail"
                android:layout_width="40dp"
                android:layout_height="27dp"
                android:adjustViewBounds="true"
                android:background="@color/transparente"
                android:contentDescription="@string/email_imagen"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCiudad"
                app:srcCompat="@android:drawable/ic_dialog_email"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>